--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,17 @@ remote_theme: FairCrypto/minima
 minima:
   skin: auto
   social_links:
-    - { platform: github,  user_url: "https://github.com/FairCrypto/go-x1" }
+    - { platform: github, user_url: "https://github.com/FairCrypto/go-x1" }
     - { platform: twitter, user_url: "https://twitter.com/XEN_Crypto" }
     - { platform: telegram, user_url: "https://t.me/XENCryptoTalk" }
-    - { platform: youtube, user_url: "https://m.youtube.com/channel/UCiw5nyHHt9BPHvoRbcGNehA/playlists" }
+    - {
+        platform: youtube,
+        user_url: "https://m.youtube.com/channel/UCiw5nyHHt9BPHvoRbcGNehA/playlists",
+      }
 show_excerpts: false
 
 titles_from_headings:
-  enabled:     true
+  enabled: true
   strip_title: true
   collections: false
 
